--- a/src/app/components/maindata/import-user-role/import-user-role.component.html
+++ b/src/app/components/maindata/import-user-role/import-user-role.component.html
@@ -22,7 +22,14 @@
           <div class="card">
             <div class="card-header">
               <h4 class="card-title" id="basic-layout-form">Import Data</h4>
-              <a class="heading-elements-toggle"><i class="fa fa-ellipsis-v font-medium-3"></i></a>
+              <div class="heading-elements mt-0">
+                <button type="button" class="btn btn-success" (click)="downloadTemplate()">
+                  <span class="d-md-block  ">
+                    <i class="ft-download"></i>
+                    Download Template
+                  </span>
+                </button>
+              </div>
             </div>
             <div class="card-content collapse show">
               <div class="card-body">
