--- a/src/app/components/employee/employee-leave-detail/employee-leave-detail.component.html
+++ b/src/app/components/employee/employee-leave-detail/employee-leave-detail.component.html
@@ -1,1 +1,39 @@
-<p>employee-leave-detail works!</p>
+<div class="content-header row">
+  <div class="content-header-left col-md-6 col-12 mb-2">
+    <h3 class="content-header-title mb-0">รายละเอียดข้อมูลการลา</h3>
+    <div class="row breadcrumbs-top">
+      <div class="breadcrumb-wrapper col-12">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item">
+            <a [routerLink]="['/home']"> หน้าหลัก </a>
+          </li>
+          <li class="breadcrumb-item">
+            <a [routerLink]="['/employee/employee-leave']">
+              ข้อมูลข้อมูลการลา
+            </a>
+          </li>
+          <li class="breadcrumb-item">รายละเอียดข้อมูลการลา</li>
+        </ol>
+      </div>
+    </div>
+  </div>
+  <div class="content-header-right col-md-6 col-12"></div>
+</div>
+
+<div class="content-body">
+  <section id="basic-form-layouts">
+    <div class="row match-height">
+      <div class="col-md-12">
+        <div class="card">
+          <div class="card-content collapse show">
+            <div class="card-body">
+
+
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+</div>
