--- a/src/app/components/employee/employee-leave-detail/employee-leave-detail.component.html
+++ b/src/app/components/employee/employee-leave-detail/employee-leave-detail.component.html
@@ -27,9 +27,71 @@
         <div class="card">
           <div class="card-content collapse show">
             <div class="card-body">
+              <p-steps
+                [model]="items"
+                [(activeIndex)]="activeIndex"
+                [readonly]="true"
+              ></p-steps>
+              <div class="card-text">
+                <div class="row">
+                  <form class="col-sm-12 form">
+                    <div class="form-body">
+                      <h4 class="form-section"><i class="ft-info"></i> ข้อมูลการลา</h4>
+                    </div>
+                  </form>
+                </div>
+                <form [formGroup]="empLeaveDetailFormGroup" class="contact-input">
+                  <div class="row">
+                    <div class="col-xl-4 col-lg-6 col-md-12 mb-1">
+                      <fieldset class="form-group">
+                        <label for="basicInput">รหัสพนักงาน</label>
+                        <input type="text" autocomplete="off"
+                          [ngClass]="{ 'is-invalid': f.emp_code.errors && ( f.emp_code.dirty ||  f.emp_code.touched) }"
+                          class="form-control required" id="emp_code" formControlName="emp_code" [readOnly]="true">
+                      </fieldset>
+                    </div>
+                    <div class="col-xl-8 col-lg-6 col-md-12 mb-1">
+                      <fieldset class="form-group">
+                        <label for="basicInput">ชื่อ - นามสกุล</label>
+                        <input type="text" autocomplete="off"
+                          [ngClass]="{ 'is-invalid': f.emp_name.errors && ( f.emp_name.dirty ||  f.emp_name.touched) }"
+                          class="form-control required" id="emp_name" formControlName="emp_name" [readOnly]="true">
+                      </fieldset>
+                    </div>
+                    <div class="col-xl-4 col-lg-6 col-md-12 mb-1">
+                      <fieldset class="form-group">
+                        <label for="leave_start">วันที่เริ่มต้น</label>
+                        <div class="p-grid ui-fluid">
+                          <!-- <p-calendar formControlName="leave_start"
+                            [ngClass]="{ 'is-invalid': f.leave_start.errors && ( f.leave_start.dirty ||  f.leave_start.touched) }"
+                            [showIcon]="true" dateFormat="dd/mm/yyyy">
+                          </p-calendar> -->
+                        </div>
+                      </fieldset>
+                    </div>
+                    <div class="col-xl-4 col-lg-6 col-md-12 mb-1">
+                      <fieldset class="form-group">
+                        <label for="leave_stop">วันที่สิ้นสุด</label>
+                        <div class="p-grid ui-fluid">
+                          <!-- <p-calendar formControlName="leave_stop"
+                            [ngClass]="{ 'is-invalid': f.leave_stop.errors && ( f.leave_stop.dirty ||  f.leave_stop.touched) }"
+                            [showIcon]="true" dateFormat="dd/mm/yyyy">
+                          </p-calendar> -->
+                        </div>
+                      </fieldset>
+                    </div>
+                    <div class="col-xl-4 col-lg-6 col-md-12 mb-1">
+                      <fieldset class="form-group">
+                        <label for="typeLeave">ประเภทการลา</label>
+                        <input type="text" autocomplete="off"
+                          [ngClass]="{ 'is-invalid': f.typeLeave.errors && ( f.typeLeave.dirty ||  f.typeLeave.touched) }"
+                          class="form-control required" id="typeLeave" formControlName="typeLeave" [readOnly]="true">
+                      </fieldset>
+                    </div>
 
-
-
+                  </div>
+                </form>
+              </div>
             </div>
           </div>
         </div>
