--- a/src/styles.scss
+++ b/src/styles.scss
@@ -56,3 +56,31 @@ body a {
 //   background-color: #baffe7 !important;
 //   border: 1px solid #007ad9 !important;
 // }
+
+.ui-steps .ui-steps-item {
+  width: 30%;
+}
+
+.ui-steps.steps-custom {
+  margin-bottom: 30px;
+}
+
+.ui-steps.steps-custom .ui-steps-item .ui-menuitem-link {
+  padding: 0 1em;
+  overflow: visible;
+}
+
+.ui-steps.steps-custom .ui-steps-item .ui-steps-number {
+  background-color: #00bcc2 !important;
+  color: #ffffff;
+  display: inline-block;
+  width: 36px;
+  border-radius: 50%;
+  margin-top: -14px;
+  margin-bottom: 10px;
+}
+
+.ui-steps.steps-custom .ui-steps-item .ui-steps-title {
+  color: #555555;
+}
+
