--- a/src/app/components/approval/machine/employee-machine-list/employee-machine-list.component.html
+++ b/src/app/components/approval/machine/employee-machine-list/employee-machine-list.component.html
@@ -1,1 +1,218 @@
-<p>employee-machine-list works!</p>
+<div class="content-header row">
+    <div class="content-header-left col-md-6 col-12 mb-2">
+      <h3 class="content-header-title mb-0">พนักงานประจำเครื่อง</h3>
+      <div class="row breadcrumbs-top">
+        <div class="breadcrumb-wrapper col-12">
+          <ol class="breadcrumb">
+            <li class="breadcrumb-item">
+              <a [routerLink]="['/home']">หน้าหลัก</a>
+            </li>
+            <li class="breadcrumb-item">พนักงานประจำเครื่อง</li>
+          </ol>
+        </div>
+      </div>
+    </div>
+    <div class="content-header-right col-md-6 col-12">
+    </div>
+  </div>
+  
+  <div class="content-body">
+    <section id="basic-form-layouts">
+  
+      <div class="row match-height">
+        <div class="col-md-12">
+          <div class="card">
+            <div class="card-header">
+              <h4 class="card-title" id="basic-layout-form">ค้นหารายการจอง</h4>
+              <!-- <a class="heading-elements-toggle"><i class="fa fa-ellipsis-v font-medium-3"></i></a> -->
+            </div>
+            <div class="card-content collapse show">
+              <div class="card-body">
+                <div class="form-body">
+                  <div class="row">
+                    <div class="col-md-3">
+                      <div class="form-group">
+                        <label>รหัสพนักงาน</label>
+                        <input type="text" autocomplete="off" class="form-control" id="empCode" placeholder="ทั้งหมด"
+                          [(ngModel)]="empCode">
+                      </div>
+                    </div>
+                    <div class="col-md-3">
+                      <div class="form-group">
+                        <label>ชื่อพนักงาน</label>
+                        <input type="text" autocomplete="off" class="form-control" id="fName" placeholder="ชื่อพนักงาน"
+                          [(ngModel)]="empfName">
+                      </div>
+                    </div>
+                    <div class="col-md-3">
+                      <div class="form-group">
+                        <label>นามสกุลพนักงาน</label>
+                        <input type="text" autocomplete="off" class="form-control" id="surNameEmp"
+                          placeholder="นามสกุลพนักงาน" [(ngModel)]="emplName">
+                      </div>
+                    </div>
+                    <div class="col-md-3">
+                      <div class="form-group">
+                        <label>แผนก</label>
+                        <div class="p-md-10 ui-fluid">
+                          <p-dropdown [options]="departments" placeholder="-------- ทั้งหมด --------" [showClear]="true"
+                            [filter]='true' [(ngModel)]="department">
+                          </p-dropdown>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-md-3">
+                      <div class="form-group">
+                        <label>เครื่องจักร</label>
+                        <div class="p-md-10 ui-fluid">
+                          <p-dropdown [options]="machines" placeholder="-------- ทั้งหมด --------" [showClear]="true"
+                            [filter]='true' [(ngModel)]="machine">
+                          </p-dropdown>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-md-3">
+                      <div class="form-group">
+                        <label>วันที่ (From)</label>
+                        <div class="p-grid ui-fluid">
+                          <p-calendar [(ngModel)]="empleaveDateFrom" [showIcon]="true" [placeholder]="'dd/mm/yyyy'"
+                            dateFormat="dd/mm/yy" (onSelect)="funcSelectDateFrom($event)">
+                          </p-calendar>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-md-3">
+                      <div class="form-group">
+                        <label>วันที่ (To)</label>
+                        <div class="p-grid ui-fluid">
+                          <p-calendar [(ngModel)]="empleaveDateTo" [showIcon]="true" [placeholder]="'dd/mm/yyyy'"
+                            dateFormat="dd/mm/yy" [minDate]="minDate">
+                          </p-calendar>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="card-footer">
+              <div class="col-md-12">
+                <div class="form-actions">
+                  <button type="button" class="btn btn-primary mr-1" (click)="search(dt)">
+                    <i class="ft-search"></i>Search</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+  
+      <div class="row match-height">
+        <div class="col-md-12">
+          <div class="card">
+            <div class="card-header">
+              <h4 class="card-title" id="basic-layout-form">ผลการค้นหา</h4>
+              <div class="heading-elements mt-0">
+                <button type="button" class="btn btn-success" (click)="empMachine('ADD')">
+                  <i class="ft-plus"></i> เพิ่มข้อมูลพนักงานประจำเครื่อง</button>
+              </div>
+            </div>
+            <div class="card-content collapse show">
+              <div class="card-body">
+  
+                <p-table #dt [columns]="cols" [value]="datasource" [paginator]="true" [rows]="30"
+                  [rowsPerPageOptions]="[30,50,100]" dataKey="id" [resizableColumns]="false" [scrollable]="true"
+                  [reorderableColumns]="false" stateStorage="local" stateKey="datasource-local">
+                  <ng-template pTemplate="header" let-columns>
+                    <tr>
+                      <th class="text-center" [pSortableColumn]="'no'" pResizableColumn pReorderableColumn>
+                        #
+                        <p-sortIcon [field]="'no'"></p-sortIcon>
+                      </th>
+                      <th class="text-center" [pSortableColumn]="'room_name'" pResizableColumn pReorderableColumn>
+                        รหัสพนักงาน
+                        <p-sortIcon [field]="'room_name'"></p-sortIcon>
+                      </th>
+                      <th class="text-center" [pSortableColumn]="'time_start'" pResizableColumn pReorderableColumn>
+                        ชื่อ - สกุล
+                        <p-sortIcon [field]="'time_start'"></p-sortIcon>
+                      </th>
+                      <th class="text-center" [pSortableColumn]="'machineName'" pResizableColumn pReorderableColumn>
+                        เครื่องจักร
+                        <p-sortIcon [field]="'machineName'"></p-sortIcon>
+                      </th>
+                      <th class="text-center" [pSortableColumn]="'person_total'" pResizableColumn pReorderableColumn>
+                        วันที่ - เวลา
+                        <p-sortIcon [field]="'person_total'"></p-sortIcon>
+                      </th>
+                      <th class="text-center" [pSortableColumn]="'sts_code'" pResizableColumn pReorderableColumn>
+                        สถานะอนุมัติ
+                        <p-sortIcon [field]="'sts_code'"></p-sortIcon>
+                      </th>
+                      <th class="text-center" [pSortableColumn]="'action'" pResizableColumn pReorderableColumn>
+                        Action
+                        <p-sortIcon [field]="'action'"></p-sortIcon>
+                      </th>
+                    </tr>
+                  </ng-template>
+                  <ng-template pTemplate="colgroup" let-columns>
+                    <colgroup>
+                      <col [style.width]="'70px'">
+                      <col [style.width]="'150px'">
+                      <col [style.width]="'200px'">
+                      <col [style.width]="'200px'">
+                      <col [style.width]="'200px'">
+                      <col [style.width]="'150px'">
+                      <col [style.width]="'100px'">
+                    </colgroup>
+                  </ng-template>
+                  <ng-template pTemplate="body" let-rowData let-columns="columns">
+                    <tr [pSelectableRow]="rowData">
+                      <td class="text-center">
+                        {{ rowData['no'] }}
+                      </td>
+                      <td>
+                        {{ rowData['emp_code'] }}
+                      </td>
+                      <td class="text-center">
+                        {{ rowData['emp_name'] }}
+                      </td>
+                      <td>
+                        {{ rowData['machineName'] }}
+                      </td>
+                      <td>
+                        {{ rowData['job_start'] | date: 'dd/MM/yyyy' }} - {{ rowData['job_stop'] | date: 'dd/MM/yyyy'
+                        }}
+                      </td>
+                      <td class="text-center">
+                        <span class="badge" [style.background-color]="rowData.sts_color">
+                          {{ rowData['sts_text'] }}
+                        </span>
+                      </td>
+                      <td class="text-center">
+                        <button type="button" class="btn btn-info btn-sm" (click)="empMachine(rowData['id'])">
+                          รายละเอียด
+                        </button>
+                      </td>
+                    </tr>
+                  </ng-template>
+                  <ng-template pTemplate="emptymessage" let-columns>
+                    <tr>
+                      <td [attr.colspan]="columns.length" class="text-center">
+                        No data available in table
+                      </td>
+                    </tr>
+                  </ng-template>
+                </p-table>
+  
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+  
+    </section>
+  </div>
+  
